# IDP-4000-04A

./: README.md
source/BSP/: CMakeLists.txt  README.md  bsp_test.c
source/BSP/drivers/: CMakeLists.txt
source/BSP/drivers/eve_hal/: CMakeLists.txt  EVE_Cmd.c  EVE_Cmd.h  EVE_CoCmd.c  EVE_CoCmd.h  EVE_CoCmd_IO.c  EVE_CoCmd_State.c  EVE_CoCmd_Widgets.c  EVE_CoDl.c  EVE_CoDl.h  EVE_Config.h  EVE_FlashHelper.c  EVE_FlashHelper.h  EVE_GpuDefs.h  EVE_GpuTypes.h  EVE_Hal.c  EVE_Hal.h  EVE_HalDefs.h  EVE_HalImpl.h  EVE_HalImpl_RP2040.c  EVE_MediaFifo.c  EVE_MediaFifo.h  EVE_Platform.h  EVE_Platform_RP2040.h  EVE_Util.c  EVE_Util.h  README.md  eve_app.h
source/BSP/drivers/i2c_utils/: CMakeLists.txt  i2c_utils.c  i2c_utils.h
source/BSP/drivers/lcd/: ATt040.h  ATt040_RP2040.c  CMakeLists.txt
source/BSP/drivers/max31725/: CMakeLists.txt  max31725.c  max31725.h
source/BSP/drivers/rotary/: CMakeLists.txt  rotary.c  rotary.h
source/BSP/drivers/sdcard/: CMakeLists.txt  diskio_rp2040.c  sdcard.c  sdcard.h
source/BSP/example_binary/: BSP_test.uf2
source/BSP/extras/: CMakeLists.txt  cli.h  cli_basic.c  cli_hwtests.c  cli_hwtests.h
source/BSP/include/: bridgetek_idp_4000_04a.h  bsp_app.h  bsp_debug.h  bsp_hwdefs.h
source/smart_home_control_hub_app/: CMakeLists.txt  README.md
source/smart_home_control_hub_app/Data/: SmartHomeControlHub__Flash.map  SmartHomeControlHub__Flash.uf2
source/smart_home_control_hub_app/Esd_Core/: Esd_AnimationInfo.c  Esd_Base.h  Esd_BitmapHandle.c  Esd_BitmapInfo.c  Esd_BitmapInfo.h  Esd_CoWidget.c  Esd_Context.c  Esd_FontInfo.c  Esd_LittleFS.h  Esd_Render__h__Simulation.c  Esd_ResourceInfo.c  Esd_ResourceInfo.h  Esd_Utility.c
source/smart_home_control_hub_app/FT_Esd_Framework/: Ft_Esd_CoCmd__h__Simulation.c  Ft_Esd_Primitives__h__Simulation.c
source/smart_home_control_hub_app/FT_Esd_Widgets/: Ft_Esd_Animation.c  Ft_Esd_CircleLine.c  Ft_Esd_Elements__h__Simulation.c  Ft_Esd_Toggle.c
source/smart_home_control_hub_app/FT_Eve_Hal/: EVE_CoCmd.c  EVE_CoCmd.h  EVE_CoCmd_IO.c  EVE_CoCmd_Widgets.c  EVE_CoDl.h  EVE_Config.h  EVE_GpuDefs.h  EVE_GpuTypes.h  EVE_Hal.c  EVE_HalDefs.h  EVE_HalImpl_RP2040.c  EVE_IDM2040_21R_RP2040.c  EVE_IDP2040_40A.h  EVE_IDP2040_40A_RP2040.c  EVE_IDP_4000_04A.h  EVE_IDP_4000_04A_RP2040.c  EVE_LoadFile.h  EVE_LoadFile_FATFS.c  EVE_Platform.h  EVE_Platform_FT9XX.h  EVE_Platform_RP2040.h  EVE_Util.c  EVE_Util.h  Gpu_Hal.h
source/smart_home_control_hub_app/SmartHomeControlHub/: AppScreen.c  AppScreen.h  AppScreen__Generated.c  App__Generated.c  CeilingLigehtCase2.c  CeilingLigehtCase2.h  CeilingLigehtCase2_progmem.h  CeilingLightWire1.c  CeilingLightWire1.h  CeilingLightWire1_progmem.h  CelingLight1.c  CelingLight1.h  CelingLight1_progmem.h  Curtain_adjust.c  Curtain_adjust.h  Curtain_adjust_progmem.h  Curtain_hand_pull.c  Curtain_hand_pull.h  Curtain_hand_pull_progmem.h  DefaultTheme.c  FloorHeatOff.c  FloorHeatOff.h  FloorHeatOff_progmem.h  FloorHeatOn.c  FloorHeatOn.h  FloorHeatOn_progmem.h  Ft_Esd_TransparentRectButton.h  Ft_Esd_TransparentRectButton__Generated.c  Lamp.c  Lamp.h  LampBase.c  LampBase.h  LampBase_progmem.h  LampChasis1.c  LampChasis1.h  LampChasis1_progmem.h  LampChasis2.c  LampChasis2.h  LampChasis2_progmem.h  LampNeck.c  (+178 more)
source/smart_home_control_hub_app/ThirdPartyLib/sd_driver/: hw_config.c  sd_card.c
source/smart_home_control_hub_app/sample_binary/: SmartHomeControlHub.uf2
tool/eve_flash_pico/: README.md  board.h  eve_flash_pico.uf2  uf2conv4eve.py
tool/eve_flash_pico/source/EveApps/: repository.yml  version.yml
tool/eve_flash_pico/source/EveApps/common/application/: Common.c  Common.h  FileIo.c  FileIo.h  FileTransfer.c  FlashHelper.c
tool/eve_flash_pico/source/EveApps/common/application/fatfs/source/: CMakeLists.txt  diskio_stm32.c
tool/eve_flash_pico/source/EveApps/common/eve_hal/: EVE_Config.h  EVE_HalDefs.h  EVE_HalImpl_RP2040.c  EVE_HalImpl_STM32.c  EVE_ILI9488_RP2040.c  EVE_LoadFile.h  EVE_LoadFile_FATFS.c  EVE_LoadFile_STDIO.c  EVE_Platform.h  EVE_Platform_STM32.h  EVE_Platform_STM32F401xC.h  EVE_Util.c
tool/eve_flash_pico/source/ports/stm32/stm32f401ccu6/eve_flash_stm32f401ccu6/: .cproject  .project  eve_flash_stm32f401ccu6.ioc
tool/eve_flash_pico/source/ports/stm32/stm32f401ccu6/eve_flash_stm32f401ccu6/Core/Inc/: add_eve_example.h  add_led.h  add_printf.h  add_sdcard.h  main.h
tool/eve_flash_pico/source/ports/stm32/stm32f401ccu6/eve_flash_stm32f401ccu6/Core/Src/: add_eve_example.c  add_led.c  add_printf.c  add_sdcard.c  main - before - copy-  example.v  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
tool/eve_flash_pico/source/tinyusb/src/common/: tusb_debug.h
tool/eve_flash_pico/source/uf2/: CMakeLists.txt  board.h  board_api.h  board_flash.c  boards.c  ghostfat.c  main.c  msc.c  tusb_config.h  uf2.h  usb_descriptors.c
